--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,6 +1,6 @@
 nav {
   color: #FFFFFF;
-  min-height: 120px;
+  height: 120px;
   width: auto;
   background-color: #4056a1;
   padding-left:  1.5em;
@@ -9,9 +9,21 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
+  z-index: 1;
 }
 
 .logo {
   font-family: Bungee;
   font-size: 200%;
+}
+
+.dropDown {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2%;
+}
+
+#blurb {
+  margin-bottom: 0%;
 }
