--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -21,6 +21,15 @@ body {
   font-size: 24px;
 }
 
+.container {
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #f4f1ec;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
