added tweet styling

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,6 +27,7 @@ body {
   background-color: #f4f1ec;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
 }
 
