--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,6 +19,8 @@ body {
   background-color: #f4f1ec;
   font-family: Source Sans Pro;
   font-size: 24px;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
