--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,7 @@
 nav {
   color: #FFFFFF;
   height: 120px;
-  width: auto;
+  width: 100%;
   background-color: #4056a1;
   padding-left:  1.5em;
   padding-right:  1.5em;
@@ -10,6 +10,8 @@ nav {
   justify-content: space-between;
   align-items: flex-end;
   z-index: 1;
+  position: fixed;
+  top: 0;
 }
 
 .logo {
