--- a/public/styles/tweet-layout.css
+++ b/public/styles/tweet-layout.css
@@ -15,6 +15,13 @@ article.tweet header {
   display: flex;
   flex-direction: row;
   justify-content: left;
+  justify-content: space-between;
+  align-items: center;
+}
+
+article.tweet header div {
+  display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
