added render logic that allows prepended tweets

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: snow;
+  color: #ffffff;
+  background-color: #4056a1;
   background-image: url("/images/axiom-pattern.png");
 }
