--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,5 @@
-.profile {
+header {
+  margin-top: 120px;
   height: 400px;
   width: inherit;
   display: flex;
@@ -6,6 +7,6 @@
   justify-content: center;
   align-items: center;
   color: #ffffff;
-  background-color: #4056a1;
+  background-color: #7c83e6;
   background-image: url("/images/axiom-pattern.png");
 }
