--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,17 +1,18 @@
 nav {
   color: #FFFFFF;
+  background-color: #4056a1;
   height: 120px;
   width: 100%;
-  /* background-color: #4056a1; */
+  /* z-index: 1; */
+  position: absolute;
+  top: 0%;
   padding-left:  1.5em;
   padding-right:  1.5em;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  z-index: 1;
-  position: fixed;
-  top: 0%;
+
 }
 
 .logo {
