--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,9 +1,8 @@
 nav {
   color: #FFFFFF;
-  background-color: #4056a1;
   height: 120px;
   width: 100%;
-  /* z-index: 1; */
+  z-index: 1;
   position: absolute;
   top: 0%;
   padding-left:  1.5em;
@@ -11,8 +10,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-end;
-
+  align-items: center;
 }
 
 .logo {
